@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<tool-setup>
+ <required tool_id="portal_actionicons"
+           class="Products.CMFActionIcons.ActionIconsTool.ActionIconsTool"/>
+</tool-setup>
