@@ -16,6 +16,9 @@ After CMF 1.5.4
 
   Features
 
+    - CMFActionIcons:  added support for exporting / importing
+      action icons tool configuration (via GenericSetup).
+
     - CMFSetup:  added support for configuring content type registry.
 
     - CMFSetup:  added support for configuring caching policy manager.
